--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.1",
+    "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular-progress-bar": "^1.0.3",
     "core-js": "^2.5.4",
