Added Typewriter Text

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular-progress-bar": "^1.0.3",
+    "angular-typing-animation": "^0.5.4",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
