--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,23 +1,34 @@
 {
     "projects": [
         {
-            "name": "Test",
-            "description": "",
+            "name": "Test 1",
+            "description": "Sample Project",
+            "carousel_description": "Test Language",
             "url": "",
             "images": [
                 "",
                 "",
                 ""
             ],
-            "languages": [
+            "images_title": [
                 "",
                 "",
                 ""
             ],
-            "tools": [
+            "images_description": [
                 "",
                 "",
                 ""
+            ],
+            "languages": [
+                "test",
+                "tasdf",
+                "zxcv"
+            ],
+            "tools": [
+                "qqq",
+                "asd",
+                "zzz"
             ]
         }
     ]
